--- a/static/admin.html
+++ b/static/admin.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
 
-                <li><a href="inicio.html">inicio</a></li>
-                <li><a href="catalogo.html">catalogo</a></li>
+                <li><a href="static/inicio.html">inicio</a></li>
+                <li><a href="static/catalogo.html">catalogo</a></li>
             </ul>
         </nav>
     </header>
