--- a/static/catalogo.html
+++ b/static/catalogo.html
@@ -12,8 +12,8 @@
         <h1>Catálogo de Produtos</h1>
         <nav>
             <ul>
-                <li><a href="inicio.html">Início</a></li>
-                <li><a href="admin.html">Administração</a></li>
+                <li><a href="static/inicio.html">Início</a></li>
+                <li><a href="static/admin.html">Administração</a></li>
             </ul>
         </nav>
     </header>
