--- a/static/index.html
+++ b/static/index.html
@@ -12,8 +12,8 @@
         <h1>Loja de Móveis</h1>
         <nav>
             <ul>
-                <li><a href="catalogo.html">Catálogo</a></li>
-                <li><a href="admin.html">Administração</a></li>
+                <li><a href="static/catalogo.html">Catálogo</a></li>
+                <li><a href="static/admin.html">Administração</a></li>
             </ul>
         </nav>
     </header>
