--- a/static/admin.html
+++ b/static/admin.html
@@ -34,6 +34,6 @@
         <p>&copy; 2025 Loja de Móveis. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="js.js"></script>
+    <script src="static/script.js"></script>
 </body>
 </html>
