--- a/static/index.html
+++ b/static/index.html
@@ -22,7 +22,7 @@
         <section class="hero">
             <h2>Móveis de Qualidade por um Preço Justo</h2>
             <p>Descubra nossa linha de móveis modernos e sofisticados para seu lar.</p>
-            <a href="catalogo.html" class="button">Ver Catálogo</a>
+            <a href="static/catalogo.html" class="button">Ver Catálogo</a>
         </section>
     </main>
 
