Corrigindo caminhos dos arquivos estáticos e navegação

--- a/static/catalogo.html
+++ b/static/catalogo.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catálogo - Loja de Móveis</title>
-    <link rel="stylesheet" href="static/styles.css">
-    <script src="static/script.js"></script>
+    <link rel="stylesheet" href="/styles.css">
+    <script src="/script.js"></script>
 </head>
 <body>
     <header>
         <h1>Catálogo de Produtos</h1>
         <nav>
             <ul>
-                <li><a href="static/inicio.html">Início</a></li>
-                <li><a href="static/admin.html">Administração</a></li>
+                <li><a href="s/index.html">Início</a></li>
+                <li><a href="/admin.html">Administração</a></li>
             </ul>
         </nav>
     </header>
