--- a/static/admin.html
+++ b/static/admin.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administração</title>
-    <link rel="stylesheet" href="static/styles.css">
-    <script src="static/script.js"></script>
+    <link rel="stylesheet" href="/styles.css">
+    <script src="/script.js"></script>
 </head>
 <body>
     <header>
