Meu Deus do céu

--- a/static/admin.html
+++ b/static/admin.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
 
-                <li><a href="static/inicio.html">inicio</a></li>
-                <li><a href="static/catalogo.html">catalogo</a></li>
+                <li><a href="/inicio.html">inicio</a></li>
+                <li><a href="/catalogo.html">catalogo</a></li>
             </ul>
         </nav>
     </header>
@@ -34,6 +34,6 @@
         <p>&copy; 2025 Loja de Móveis. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="static/script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
