--- a/static/catalogo.html
+++ b/static/catalogo.html
@@ -12,7 +12,7 @@
         <h1>Catálogo de Produtos</h1>
         <nav>
             <ul>
-                <li><a href="s/index.html">Início</a></li>
+                <li><a href="/index.html">Início</a></li>
                 <li><a href="/admin.html">Administração</a></li>
             </ul>
         </nav>
