--- a/static/admin.html
+++ b/static/admin.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
 
-                <li><a href="/inicio.html">inicio</a></li>
+                <li><a href="/index.html">inicio</a></li>
                 <li><a href="/catalogo.html">catalogo</a></li>
             </ul>
         </nav>
